Fix broken interface in Checkout steps

--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -163,7 +163,6 @@ color:#fa3e6e;
 
 }
 .thanks_subheading{
-  color:#38B4DE;
   font-size:25px;
 }
 .thanks_img{
